instances/influxdb-grafana/influxdb-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: influxdb-service
spec:
  ports:
    - protocol: TCP
      port: 8086
      targetPort: 8086
  selector:
    app: influxdb
  type: ClusterIP
  sessionAffinity: None
